fixed offset on mobile screen because of notification content

--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,7 @@ span.ripple {
   border-radius: 25px;
   opacity: 0;
   transition: all 0.25s ease;
+  display: none;
 }
 
 .noti_dropdown h4 {
@@ -215,6 +216,7 @@ span.ripple {
   opacity: 1;
   height: 85%;
   width: 95%;
+  display: block;
 }
 
 #unit_div {
